--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
   <template id="letterTemplate">
     <div class="p-6">
       <h2 class="text-2xl font-bold">Minha carta para Vitoria</h2>
-      <p class="mt-4 text-slate-700">Vitoria,<br>Desde que te conheci, cada dia ganhou novas cores. Seu sorriso acende uma luz que me guia, e sua presença transforma o ordinário em mágico. Quero estar ao seu lado, construir memórias e dividir risos e silêncios. Obrigado por existir e por me permitir te conhecer. Com todo meu carinho,</p>
+      <p class="mt-4 text-slate-700">Meu bem,<br>Desde que te conheci, cada dia ganhou novas cores. Seu sorriso acende uma luz que me guia, e sua presença transforma o ordinário em mágico. Quero estar ao seu lado, construir memórias e dividir risos e silêncios. Obrigado por existir e por me permitir te conhecer. Com todo meu carinho,</p>
       <p class="mt-4 font-semibold">— Quem te escreveu</p>
     </div>
   </template>
 
   <audio id="bgAudio" loop preload="auto">
-    <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_8f3d9c6aa9.mp3?filename=romantic-piano-111690.mp3" type="audio/mpeg">
+    <source src="https://www.youtube.com/watch?v=ZsyKJeqOAb0&list=RDZsyKJeqOAb0&start_radio=1" type="audio/mpeg">
   </audio>
 
  
@@ -149,4 +149,5 @@
     setInterval(updateTime, 1000);
   </script>
 </body>
+
 </html>
